tests/ui/traits/next-solver/cycles/mixed-cycles-2.stderr
error[E0275]: overflow evaluating the requirement `(): A`
  --> $DIR/mixed-cycles-2.rs:30:15
   |
LL |     impls_a::<()>();
   |               ^^
   |
note: required by a bound in `impls_a`
  --> $DIR/mixed-cycles-2.rs:27:15
   |
LL | fn impls_a<T: A>() {}
   |               ^ required by this bound in `impls_a`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0275`.
